--- a/EdgeDetectionApp/Views/OptionsView.xaml
+++ b/EdgeDetectionApp/Views/OptionsView.xaml
@@ -20,7 +20,7 @@
         </Grid.ColumnDefinitions>
         <GroupBox Grid.Column="0" Margin="10" Header="Edge Detection Method" Foreground="#A9A9A9" VerticalAlignment="Top">
             <ListBox Background="Transparent"
-                             ItemsSource="{Binding EdgeDetectors}" SelectedItem="{Binding SelectedEdgeDetector}" BorderBrush="Transparent" SelectedIndex="0">
+                             ItemsSource="{Binding EdgeDetectors}" SelectedItem="{Binding SelectedEdgeDetector}" BorderBrush="Transparent">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="IsSelected" Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}"/>
