--- a/EdgeDetectionApp/App.xaml
+++ b/EdgeDetectionApp/App.xaml
@@ -3,8 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EdgeDetectionApp"
              xmlns:vm ="clr-namespace:EdgeDetectionApp.ViewModel"
+             xmlns:v ="clr-namespace:EdgeDetectionApp.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <!--<DataTemplate DataType="{x:Type vm:ImageViewModel}">
+            <v:ImageView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:VideoViewModel}">
+            <v:VideoView/>
+        </DataTemplate>-->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ResourceDictionary.xaml"/>
