--- a/EdgeDetectionApp/Views/UserControls/StatusBar.xaml
+++ b/EdgeDetectionApp/Views/UserControls/StatusBar.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EdgeDetectionApp.Views.UserControls"
+             DataContext="{Binding Path=ImageViewModel, Source={StaticResource ViewModelLocator}}"
              mc:Ignorable="d" 
              d:DesignHeight="23" d:DesignWidth="800">
     <StatusBar Background="{StaticResource blackColor}" BorderThickness="0,0.3,0,0" BorderBrush="{StaticResource borderColor}">
