--- a/EdgeDetectionApp/Views/UserControls/ToolBar.xaml
+++ b/EdgeDetectionApp/Views/UserControls/ToolBar.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EdgeDetectionApp.Views.UserControls"
+             DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=ImageViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="800">
     <Border DockPanel.Dock="Top" BorderThickness="0.3, 0.2, 0.3, 0.3" BorderBrush="{StaticResource borderColor}">
@@ -55,12 +56,14 @@
                     <RotateTransform Angle="90" />
                 </Separator.LayoutTransform>
             </Separator>
-            <Button ToolTip="Open image window">
+            <Button ToolTip="Open image window" DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=MainViewModel}"
+                    Command="{Binding UpdateViewCommand}" CommandParameter="Image">
                 <Button.Content>
                     <Image Source="{StaticResource imageImage}" Margin="2"/>
                 </Button.Content>
             </Button>
-            <Button ToolTip="Open video window">
+            <Button ToolTip="Open video window" DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=MainViewModel}"
+                    Command="{Binding UpdateViewCommand}" CommandParameter="Video">
                 <Button.Content>
                     <Image Source="{StaticResource webcamImage}" Margin="3"/>
                 </Button.Content>
