--- a/EdgeDetectionApp/Views/ChartView.xaml
+++ b/EdgeDetectionApp/Views/ChartView.xaml
@@ -18,24 +18,8 @@
         <TextBlock DockPanel.Dock="Top" Text="Luminance Histogram" FontSize="20" FontWeight="Bold"
                    Foreground="#A9A9A9"  HorizontalAlignment="Center"/>
 
-        <lvc:CartesianChart Series="{Binding Series}" Margin="10,10,20,20"
+        <lvc:CartesianChart Series="{Binding Series, Mode=OneWay}" Margin="10,10,20,20"
                             DisableAnimations="True" Hoverable="False" Zoom="X">
-            <!--<lvc:CartesianChart.VisualElements>
-                <lvc:VisualElement X="{Binding Source={StaticResource }}" Y="4000" x:Name="text1" >
-                    <lvc:VisualElement.UIElement >
-                        <TextBlock Text="Threshold" FontSize="14" Foreground="Magenta" RenderTransformOrigin="0,0">
-                            <TextBlock.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform/>
-                                    <SkewTransform/>
-                                    <RotateTransform Angle="-90"/>
-                                    <TranslateTransform/>
-                                </TransformGroup>
-                            </TextBlock.RenderTransform>
-                        </TextBlock>
-                    </lvc:VisualElement.UIElement>
-                </lvc:VisualElement>
-            </lvc:CartesianChart.VisualElements>-->
             <lvc:CartesianChart.AxisX>
                 <lvc:Axis MinValue="0" MaxValue="260" Title="Pixel Intensity" FontSize="14">
                     <lvc:Axis.Sections>
