--- a/EdgeDetectionApp/Views/ImageView.xaml
+++ b/EdgeDetectionApp/Views/ImageView.xaml
@@ -5,12 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EdgeDetectionApp.Views"
              xmlns:v="clr-namespace:EdgeDetectionApp.Views"
+             xmlns:vm ="clr-namespace:EdgeDetectionApp.ViewModel"
              xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
              md:DialogServiceViews.IsRegistered="True"
              xmlns:controls="clr-namespace:EdgeDetectionApp.Views.UserControls"
              DataContext="{Binding Path=ImageViewModel, Source={StaticResource ViewModelLocator}}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <!--<DataTemplate DataType="{x:Type vm:ChartViewModel}">
+            <v:ChartView/>
+        </DataTemplate>-->
+    </UserControl.Resources>
     <Grid Background="{StaticResource mainColor}" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -31,7 +37,13 @@
                             HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20"/>
                 </Grid>
                 <Grid Grid.Row="1">
-                    <v:ChartView/>
+                    <ContentControl>
+                        <ContentControl.ContentTemplate>
+                            <DataTemplate DataType="{x:Type vm:ChartViewModel}">
+                                <v:ChartView/>
+                            </DataTemplate>
+                        </ContentControl.ContentTemplate>
+                    </ContentControl>
                 </Grid>
             </Grid>
         </Grid>
