--- a/EdgeDetectionApp/Views/ImageView.xaml
+++ b/EdgeDetectionApp/Views/ImageView.xaml
@@ -28,8 +28,8 @@
         <Grid Grid.Column="1">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="3*"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
                     <v:OptionsView/>
