--- a/EdgeDetectionApp/Views/OptionsView.xaml
+++ b/EdgeDetectionApp/Views/OptionsView.xaml
@@ -19,32 +19,37 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <GroupBox Grid.Column="0" Margin="10" Header="Edge Detection Method" Foreground="#A9A9A9" VerticalAlignment="Top">
-            <ListBox Background="Transparent" SelectedIndex="0"
+            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                <ScrollViewer.Resources>
+                    <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">10</sys:Double>
+                </ScrollViewer.Resources>
+                <ListBox Background="Transparent" SelectedIndex="0"
                              ItemsSource="{Binding EdgeDetectors}" SelectedItem="{Binding SelectedEdgeDetector}" BorderBrush="Transparent">
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="IsSelected" Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListBoxItem">
-                                    <ContentPresenter Margin="5"/>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel IsItemsHost="True"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <RadioButton GroupName="raid" Foreground="#A9A9A9"
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="IsSelected" Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListBoxItem">
+                                        <ContentPresenter Margin="5"/>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel IsItemsHost="True"/>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <RadioButton GroupName="raid" Foreground="#A9A9A9"
                                      Content="{Binding Name}" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" />
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </ScrollViewer>
         </GroupBox>
         <GroupBox Grid.Column="1" Margin="10" Header="Detection Options" Foreground="#A9A9A9">
             <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
@@ -54,7 +59,7 @@
                 <StackPanel>
                     <CheckBox Margin="16,5,16,5" Content="Grayscale Image" Foreground="#A9A9A9" IsChecked="{Binding IsGrayscale, Mode=OneWayToSource}"/>
                     <GroupBox Margin="5,2,5,0" Visibility="{Binding PrefiltrationVisibility, Mode=OneWay, Converter={StaticResource ResourceKey=boolToVisibilityConverter}}">
-                        <GroupBox.Header> 
+                        <GroupBox.Header>
                             <CheckBox x:Name="smoothingCheckBox" Content="Smoothing Prefiltration" Margin="2,0,2,0"
                                       Foreground="#A9A9A9" IsChecked="{Binding Prefiltration, Mode=TwoWay}"/>
                         </GroupBox.Header>
@@ -120,31 +125,6 @@
                                        AllowSpin="True" Width="70" HorizontalAlignment="Left" />
                         </Grid>
                     </GroupBox>
-                    <!--<GroupBox Margin="5,2,5,2"
-                              Visibility="{Binding HystTreshVisibility, Mode=OneWay, Converter={StaticResource boolToVisibilityConverter}}">
-                        <GroupBox.Header>
-                            <TextBlock Text="Hysteresis Thresholding" Margin="2,0,2,0"/>
-                        </GroupBox.Header>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="55"/>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="70"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <TextBlock Grid.Column="0" Grid.Row="0" Text="T Low" Margin="10"/>
-                            <TextBlock Grid.Column="0" Grid.Row="1" Text="T High" Margin="10"/>
-                            <Slider Grid.Row="0" Grid.Column="1" x:Name="CannySlider1" Minimum="0" Maximum="255" TickFrequency="1" 
-                            IsSnapToTickEnabled="True" Value="{Binding TLow, Mode=TwoWay}" Margin="10"/>
-                            <xctk:IntegerUpDown Grid.Row="0" Grid.Column="2" Value="{Binding ElementName=CannySlider1, Path=Value}" Margin="10"/>
-                            <Slider Grid.Row="1" Grid.Column="1" x:Name="CannySlider2" Minimum="0" Maximum="255" TickFrequency="1" 
-                            IsSnapToTickEnabled="True" Value="{Binding THigh, Mode=TwoWay}" Margin="10"/>
-                            <xctk:IntegerUpDown Grid.Row="1" Grid.Column="2" Value="{Binding ElementName=CannySlider2, Path=Value}" Margin="10"/>
-                        </Grid>
-                    </GroupBox>-->
                     <GroupBox Margin="5,2,5,2"
                               Visibility="{Binding HystTreshVisibility, Mode=OneWay, Converter={StaticResource boolToVisibilityConverter}}">
                         <GroupBox.Header>
